listing filter footer overlap bug fix

--- a/modules/look/client-react/ui-antd/styles/antd-landing/banner2.less
+++ b/modules/look/client-react/ui-antd/styles/antd-landing/banner2.less
@@ -54,7 +54,7 @@
   &-page {
     position: relative;
     top: 20%;
-    max-width: 1500px;
+    max-width: @navbar-max-width;
     margin: auto;
   }
   &-text-wrapper {
