--- a/modules/look/client-react/ui-antd/styles/antd-landing/content.less
+++ b/modules/look/client-react/ui-antd/styles/antd-landing/content.less
@@ -5,7 +5,7 @@
   overflow: hidden;
   .@{homepage} {
     height: 100%;
-    max-width: 1200px;
+    max-width: @navbar-max-width;
     position: relative;
     margin: auto;
     will-change: transform;
