--- a/modules/look/client-react/ui-antd/styles/layout.less
+++ b/modules/look/client-react/ui-antd/styles/layout.less
@@ -13,7 +13,7 @@
   position: relative;
   margin: auto;
   margin-top: @navbar-height-large;
-  max-width: 1500px;
+  max-width: @navbar-max-width;
   padding: 24px;
   min-height: 100vh;
   width: 100%;
