--- a/modules/look/client-react/ui-antd/styles/navbar.less
+++ b/modules/look/client-react/ui-antd/styles/navbar.less
@@ -1,5 +1,6 @@
 @navbar-height-large: 84px;
 @navbar-height-small: 44px;
+@navbar-max-width: 1500px;
 
 .navbar-parallex {
   z-index: 100;
@@ -21,7 +22,7 @@
 .navbar-wrapper {
   position: relative;
   margin: auto;
-  max-width: 1500px;
+  max-width: @navbar-max-width;
   padding: 0 24px;
 }
 
@@ -86,7 +87,7 @@
 
 .navbar-category-dropdown {
   width: 100%;
-  max-width: 1500px;
+  max-width: @navbar-max-width;
   max-height: 480px;
   overflow: hidden;
   top: 124px !important;
