--- a/modules/look/client-react/ui-antd/styles/styles.less
+++ b/modules/look/client-react/ui-antd/styles/styles.less
@@ -97,7 +97,7 @@
   overflow: hidden;
   .@{categoryCarousel} {
     height: 100%;
-    max-width: 1500px;
+    max-width: @navbar-max-width;
     position: relative;
     margin: auto;
     will-change: transform;
